presence-backend/webapp/k8s/ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  rules:
  - host: audio-events.talkstudio.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audio-app-api
            port:
              number: 80
